test-aws/aws_configs/ca-central-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0d05de64",
     "NetworkAclId": "acl-11509778",
     "SubnetId": "subnet-534fae28"
    },
    {
     "NetworkAclAssociationId": "aclassoc-0c05de65",
     "NetworkAclId": "acl-11509778",
     "SubnetId": "subnet-bad210d3"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-11509778",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-bc67a3d5"
  }
 ]
}
