test-aws/aws_configs/ca-central-1/RouteTables.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true,
     "RouteTableAssociationId": "rtbassoc-1e4e8377",
     "RouteTableId": "rtb-71fb3d18"
    }
   ],
   "OwnerId": "118292266645",
   "PropagatingVgws": [],
   "RouteTableId": "rtb-71fb3d18",
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16",
     "GatewayId": "local",
     "Origin": "CreateRouteTable",
     "State": "active"
    },
    {
     "DestinationCidrBlock": "0.0.0.0/0",
     "GatewayId": "igw-9e30cff7",
     "Origin": "CreateRoute",
     "State": "active"
    }
   ],
   "Tags": [],
   "VpcId": "vpc-bc67a3d5"
  }
 ]
}
