test-aws/aws_configs/ca-central-1/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "default VPC security group",
   "GroupId": "sg-78fd2a11",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-78fd2a11",
       "UserId": "118292266645"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "118292266645",
   "VpcId": "vpc-bc67a3d5"
  }
 ]
}
